Removed not used files and fixes
